[gd_scene load_steps=4 format=2]

[ext_resource path="res://DATA/SCRIPTS/map_editor.gd" type="Script" id=1]
[ext_resource path="res://DATA/TILESETs/TEST_ROOM_THORN.tres" type="TileSet" id=2]
[ext_resource path="res://DATA/TILESETs/TEST_ROOM_TLS.tres" type="TileSet" id=3]

[node name="root" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="THORN" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Transform" ]

[node name="TILE_MAP" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Transform" ]

[node name="MAP_ENTER" type="Node2D" parent="." index="2"]

[node name="MORPH_GATES" type="Node2D" parent="." index="3"]

[node name="DASH_NODES" type="Node2D" parent="." index="4"]

[node name="PORTALS" type="Node2D" parent="." index="5"]

[node name="BLOCK_INDX" type="Sprite" parent="." index="6"]

modulate = Color( 1, 1, 1, 0.834235 )
position = Vector2( 64, 64 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="VIEW" type="Camera2D" parent="." index="7"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 8, 8 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin" ]


